# transformer

./: README.md  pyproject.toml
src/: config.py  conv.py  main.py
test/: test_main.py
test/test_files/in/: lawn-backyard.HEIC
