[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["Florian Heuer <florian.heuer89@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.6.0"
matplotlib = "^3.5.3"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
