[tool.poetry]
name = "transformer"
version = "0.1.0"
description = ""
authors = ["Florian Heuer"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.4"
opencv-python = "^4.6.0.66"
pyheif = "^0.7.0"
Pillow = "^9.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
